--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,9 +1,12 @@
 .navbar {
+	background-color: #211E1E;
 	float: left;
 	text-align: center;
 	width: 100%;
 }
 .navbar-brand {
-	float:none;
-	font-size: 24px;
+	float: center;
+	font-size: 40px;
+	color: #FFFAF4;
+	font-family: 'Major Mono Display', monospace;
 }
