--- a/client/src/pages/Profile/profile.css
+++ b/client/src/pages/Profile/profile.css
@@ -3,6 +3,8 @@
     font-family: 'Cuprum', sans-serif;
     padding: 10px;
     font-size: 25px;
+    opacity: .8;
+    filter: alpha(opacity=50);
 }
 
 .name {
