moved handleinputchange of login to modal

--- a/client/src/pages/Profile/RegisterArtist/register.css
+++ b/client/src/pages/Profile/RegisterArtist/register.css
@@ -1,6 +1,6 @@
-/* body {
-		background-image: url(img/concrete-wall.jpg);
+body {
+		background-image: url(./img/concrete-wall.jpg);
 		background-repeat: no-repeat;
 		background-size: cover;
- } */
+ }
 
