--- a/client/src/pages/Profile/RegisterUser/register.css
+++ b/client/src/pages/Profile/RegisterUser/register.css
@@ -1,5 +1,5 @@
-/* body {
-	background-image: url(img/concrete-wall.jpg);
+body {
+	background-image: url(./img/concrete-wall.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
-} */
+}
