--- a/client/src/pages/Landing/landing.css
+++ b/client/src/pages/Landing/landing.css
@@ -1,6 +1,6 @@
 .landing-background {
     background-image: url(img/landingpic2.jpg);
-    width: 70%;
+    width: 400px;
 }
 
 h1 {
@@ -8,9 +8,9 @@ h1 {
 }
 
 .landing {
-    align-self: center;
+    
     color: black;
-    height: 500px;
+    height: 450px;
     width: 400px;
     opacity: 0.5;
     filter: alpha(opacity=50);
