--- a/client/src/components/Search/search.css
+++ b/client/src/components/Search/search.css
@@ -1,12 +1,12 @@
 .input-field {
     height: 50px;
-    background-color: #211E1E;
+    background-color: slategray;
+} 
+
+#input-text {
+    color: whitesmoke;
 }
 
-#input_text {
+/* #textarea2 {
     color: #FFFAF4;
-}
-
-#textarea2 {
-    color: #FFFAF4;
-}
+}  */
