--- a/client/src/pages/Profile/profile.css
+++ b/client/src/pages/Profile/profile.css
@@ -1,3 +1,12 @@
+label {
+	color: white;
+}
+
+textarea {
+	width: 300px;
+	height: 100px;
+}
+
 .profile {
 	background-color: #B4B5A1;
 	font-family: 'Cuprum', sans-serif;
@@ -30,9 +39,14 @@
 	width: 300px;
 }
 
+.commentBox {
+	float: left;
+	overflow: auto;
+}
+
 #form {
 	margin-left: 30%;
 	float: center;
-	width: 200px;
-	height: 120px;
+	width: 300px;
+	overflow: auto;
 }
