--- a/client/src/components/Search/search.css
+++ b/client/src/components/Search/search.css
@@ -1,12 +1,9 @@
 .input-field {
-    height: 50px;
-    background-color: slategray;
+	height: 50px;
+	background-color: slategray;
 } 
 
 #input-text {
-    color: whitesmoke;
+	color:darkblue;
 }
 
-/* #textarea2 {
-    color: #FFFAF4;
-}  */
