--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,11 +1,65 @@
-.navbar {
+nav {
 	background-color: #211E1E;
 	text-align: center;
 	width: 100%;
+	overflow: hidden;
+	padding: 10px;
 }
+
 .navbar-brand {
-	float: center;
+	float: left;
 	font-size: 40px;
 	color: #FFFAF4;
 	font-family: 'Major Mono Display', monospace;
 }
+
+a {
+	color: #FFFAF4;
+}
+
+a:visited {
+	color: #FFFAF4;
+}
+
+.navWide {
+	display: none;
+	margin: 0 auto;
+}
+
+nav .navWide .wideDiv {
+	text-align: center;
+}
+
+nav .navWide .wideDiv a {
+	text-decoration: none;
+	display: inline-block;
+	padding: 0 2em;
+}
+
+nav .navNarrow i {
+	float: right;
+	cursor: pointer;
+	color: #FFF;
+}
+
+nav .navNarrow .narrowLinks {
+	display: none;
+}
+
+nav .navNarrow .narrowLinks a {
+	text-decoration: none;
+	display: block;
+	float: right;
+	clear: left;
+	padding: 0.5em 0;
+}
+
+@media (min-width: 480px) {
+	nav .navWide {
+		display: block;
+	}
+	nav .navNarrow {
+		display: none;
+	} 
+}
+ 
