--- a/client/src/components/Wrapper/Wrapper.css
+++ b/client/src/components/Wrapper/Wrapper.css
@@ -2,10 +2,10 @@
 	display: flex;
 	min-height: 100%;
 	flex-wrap: wrap;
-	justify-content: center;
+	/* justify-content: center; */
 	padding-top: 5px;
 	padding-bottom: 5px;
-	width: 90%;
+	width: 100%;
 	margin: 0 auto;
 
 }
