--- a/client/src/components/Wrapper/Wrapper.css
+++ b/client/src/components/Wrapper/Wrapper.css
@@ -1,12 +1,11 @@
 .wrapper {
 	display: flex;
-	min-height: 100%;
+	height: auto;
 	flex-wrap: wrap;
-	/* justify-content: center; */
 	padding-top: 5px;
 	padding-bottom: 5px;
 	width: 100%;
-	margin: 0 auto;
+	margin: 0;
+	/* overflow: auto; */
 
 }
-
