--- a/client/src/pages/Profile/RegisterArtist/register.css
+++ b/client/src/pages/Profile/RegisterArtist/register.css
@@ -8,6 +8,20 @@ h3 {
 	font-size: 20px;
 }
 
+h3 {
+	font-family: 'Cuprum', sans-serif;
+}
+
 label {
 	color: #211E1E;
+}
+
+ .input-field  {
+	background-color: #DADADA;
+}
+
+.userform {
+	background-image: url(./img//wall.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
 }
