--- a/client/src/pages/Profile/RegisterUser/register.css
+++ b/client/src/pages/Profile/RegisterUser/register.css
@@ -1,20 +1,37 @@
-body {
+/* body {
 	background-image: url(./img/concrete-wall.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
 
-.title {
-	font-size: 40px;
-	font-family: 'Cuprum', sans-serif;
-	text-align: center;
-}
+
+
+body {
+	background-image: url(./img/concrete-wall.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+} */
 
 .userform {
-	background-color: #B4B5A1;
 	font-family: 'Cuprum', sans-serif;
-	padding: 10px;
+	padding: 15px;
 	font-size: 25px;
-	opacity: .8;
+	opacity: .75;
 	filter: alpha(opacity=50);
+}
+
+.title {
+	font-size: 48px;
+	font-family: 'Major Mono Display', monospace;
+	font-weight: bold;
+	text-align: center;
+	color: #388e3c;
+}
+
+label {
+color: #211E1E;
+}
+
+.input-field  {
+background-color: #DADADA;
 }
