--- a/client/src/components/Address/address.css
+++ b/client/src/components/Address/address.css
@@ -1,6 +1,23 @@
+.form {
+	padding: 5%;	
+}
+
 .address {
-	width: 50%;
-	padding: 1%;
-	background-color: black;
+	width: 55%;
+	background-color: #008080;
 	z-index: 1;
+	color: white;
+}
+
+.submit {
+	background-color: #FFA500;
+	width: 100%;
+}
+
+.label {
+	color: white;
+}
+
+.close {
+	margin-top: 0;
 }
