added access to camera on chrome

--- a/client/src/pages/Profile/profile.css
+++ b/client/src/pages/Profile/profile.css
@@ -4,7 +4,6 @@
 	padding: 10px 35px 15px 35px;
 	font-size: 17px;
 	opacity: .8;
-	margin-top: 3%;
 	filter: alpha(opacity=50);
 }
 	
@@ -14,32 +13,6 @@
 	margin: 0;
 }
 
-.upload-btn-wrapper {
-	position: relative;
-	overflow: hidden;
-	display: inline-block;
-	text-align: center;
-}
-
-.upload-btn-wrapper input[type=file] {
-	font-size: 100px;
-	position: absolute;
-	left: 0;
-	top: 0;
-	opacity: 0;
-}
-
-.btn {
-	width: 300px;
-}
-
-.commentBox {
-	float: left;
-	overflow: auto;
-}
-
-#form {
-	width: 50%;
-	overflow: auto;
-	margin: 0 auto;
+.imageContainer {
+	margin-top: 5%;
 }
