--- a/client/src/components/Card/card.css
+++ b/client/src/components/Card/card.css
@@ -1,7 +1,7 @@
 .card {
-    background-color: #FFFAF4;
-    color: #FFFAFA;
-    height: 200px;
-    opacity: 1;
-    width: 300px;
+  background-color: #fffaf4;
+  color: #fffafa;
+  height: 200px;
+  opacity: 1;
+  width: 300px;
 }
