finished upload and redirect from profile to upload screen

--- a/client/src/pages/Profile/Profile_Test.css
+++ b/client/src/pages/Profile/Profile_Test.css
@@ -1,4 +1,4 @@
-/* .profile {
+.profile {
 	background-color: #B4B5A1;
 	font-family: 'Cuprum', sans-serif;
 	padding: 10px 35px 15px 35px;
@@ -6,15 +6,15 @@
 	opacity: .8;
 	margin-top: 3%;
 	filter: alpha(opacity=50);
-} */
+}
 	
-/* .name {
+.name {
 	font-size: 35px;
 	text-align: center;
 	margin: 0;
-} */
+}
 
-/* .upload-btn-wrapper {
+.upload-btn-wrapper {
 	position: relative;
 	overflow: hidden;
 	display: inline-block;
@@ -27,23 +27,19 @@
 	left: 0;
 	top: 0;
 	opacity: 0;
-} */
+}
 
 .btn {
 	width: 300px;
 }
 
-h5 {
-	margin-top: 25px;
-}
-
-/* .commentBox {
+.commentBox {
 	float: left;
 	overflow: auto;
-} */
+}
 
-/* #form {
+#form {
 	width: 50%;
 	overflow: auto;
 	margin: 0 auto;
-} */
+}
