--- a/client/src/pages/ImageUpload/upload.css
+++ b/client/src/pages/ImageUpload/upload.css
@@ -30,12 +30,10 @@
 
 .commentBox {
 	width: 100%;
+	border: 4px solid teal;
+	padding: 10px;
 }
 
-.commentLabel {
-	margin-top: 1%;
-	color: white;
-}
 
 #submit {
 	background-color: red;
