fixed grid on search results container

--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -17,23 +17,15 @@ h1 {
 	padding: 10px;
 }
 
-.row-results {
-	/* box-sizing: content-box; */
-	/* position: relative; */
+.results, .noResults {
 	background-color: #AFAFAC;
 	color: black;
-	height: 750px;
+	height: auto;
 	width: 90%;
 	opacity: .8;
 	filter: alpha(opacity=50);
 	margin: 25px 50px;
 	padding: 10px;
-
-
-}
-
-.noResults{
-	padding-bottom: 15px;
 }
 
 .search-container {
