--- a/client/src/components/artCard/artCard.css
+++ b/client/src/components/artCard/artCard.css
@@ -1,6 +1,10 @@
 .card {
-	box-sizing: border-box;
-	margin: 15px 5px 5px 5px;
+	display: inline-block;
+}
+
+.artwork {
+		margin-bottom: 25px;
+		box-sizing: border-box;
 }
 
 .card-image {
