--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -1,6 +1,6 @@
-body {
-	background-image: url(img/homepic.jpg);
-}
+/* body {
+	/* background-image: url(img/homepic.jpg); */
+
 
 h1 {
 	font-family: 'Major Mono Display', monospace;
