--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -13,27 +13,28 @@ nav {
 	font-family: 'Major Mono Display', monospace;
 }
 
-a {
+nav a {
 	color: #FFFAF4;
 }
 
-a:visited {
+nav a:visited {
 	color: #FFFAF4;
 }
 
-.navWide {
+nav .navWide {
 	display: none;
 	margin: 0 auto;
 }
 
 nav .navWide .wideDiv {
 	text-align: center;
+	padding: 0.5em 0;
 }
 
 nav .navWide .wideDiv a {
 	text-decoration: none;
 	display: inline-block;
-	padding: 0 2em;
+	padding: 0 2em 0;
 }
 
 nav .navNarrow i {
@@ -49,9 +50,9 @@ nav .navNarrow .narrowLinks {
 nav .navNarrow .narrowLinks a {
 	text-decoration: none;
 	display: block;
-	float: right;
-	clear: left;
-	padding: 0.5em 0;
+	float: left;
+	/* clear: left; */
+	padding: 0.5em;
 }
 
 @media (min-width: 480px) {
@@ -60,6 +61,7 @@ nav .navNarrow .narrowLinks a {
 	}
 	nav .navNarrow {
 		display: none;
-	} 
+	} 	
+
 }
  
