--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -40,7 +40,7 @@ nav .navWide .wideDiv a {
 nav .navNarrow i {
 	float: right;
 	cursor: pointer;
-	color: #FFF;
+	color: #FFFAF4;
 }
 
 nav .navNarrow .narrowLinks {
