--- a/client/src/components/artCard/artCard.css
+++ b/client/src/components/artCard/artCard.css
@@ -1,11 +1,14 @@
-.card {
-	display: inline-block;
-	background-color: #1C3D0B
+.artwork {
+	margin: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	/* width: 100%;
+	height: 100%; */
 }
 
-.artwork {
-		margin-bottom: 25px;
-		box-sizing: border-box;
+.card {
+	background-color: #1C3D0B;
 }
 
 .card-image {
@@ -13,7 +16,8 @@
 	width: 100%;
 }
 
-.icons {
-	margin: 0px 20px;
-	background-color: #FFEA0C;
+.iconz {
+	color: #FFEA0C;
+	background-color: #1C3D0B;
+	border: #1C3D0B;
 }
