upload page css

--- a/client/src/pages/Profile/RegisterArtist/register.css
+++ b/client/src/pages/Profile/RegisterArtist/register.css
@@ -1,8 +1,5 @@
 body {
-		/* background-image: url(./img/concrete-wall.jpg); */
 		background-color: grey;
-		/* background-repeat: no-repeat;
-		background-size: cover; */
  }
 
 h3 {
@@ -11,6 +8,8 @@ h3 {
 
 h3 {
 	font-family: 'Cuprum', sans-serif;
+	background-color: rgb(0,0,0,0.5);
+	width: 30%;
 }
 
 label {
@@ -25,4 +24,5 @@ label {
 	background-image: url(./img//wall.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
+	margin-bottom: 5%;
 }
