--- a/client/src/pages/Upload/upload_test.css
+++ b/client/src/pages/Upload/upload_test.css
@@ -13,8 +13,55 @@
 	width: 300px;
 }
 
-h5 {
-	margin-top: 25px;
+
+.uploadForm {
+	background-image: url(./images/old-time-wall.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	font-size: 25px;
+	opacity: .75;
+	padding: 20px;
+}
+
+.btn {
+	width: 100%;
+}
+
+.card-frame {
+	margin-top: 0;
+	height: 100%;
+	width: 100%;
+	border: 1px solid black;
+	background-color: rgb(0,0,0,0.2);
+}
+
+.card-title {
+	text-align: center;
 }
 
 
+p {
+	font-size: 15px;
+}
+
+h1 {
+	text-shadow: 2px 2px 5px black;
+	color: white;
+}
+h5 {
+	margin-left: 15%;
+}
+
+label {
+	color: white;
+}
+
+
+#input_text {
+	background: rgb(0, 0, 0, 0.1);
+	color: white;
+}
+#textarea1 {
+	background: rgb(0, 0, 0, 0.1);
+	color: white;
+}
