--- a/client/src/components/artCard/artCard.css
+++ b/client/src/components/artCard/artCard.css
@@ -8,7 +8,7 @@
 }
 
 .card {
-	background-color: #1C3D0B;
+	background-color: #388e3c;
 }
 
 .card-image {
@@ -18,6 +18,6 @@
 
 .iconz {
 	color: #FFEA0C;
-	background-color: #1C3D0B;
-	border: #1C3D0B;
+	background-color: #388e3c;
+	border: #388e3c;
 }
