map showing on button click

--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -16,12 +16,13 @@ h1 {
 .results, .noResults {
 	background-color: #AFAFAC;
 	color: black;
-	height: auto;
+	min-height: 750px;
 	width: 90%;
 	opacity: .8;
 	filter: alpha(opacity=50);
 	margin: 25px 50px;
 	padding: 10px;
+	overflow-x: scroll;
 }
 
 .search-container {
