--- a/client/src/pages/Upload/upload_test.css
+++ b/client/src/pages/Upload/upload_test.css
@@ -1,21 +1,5 @@
 .uploadForm {
-	background-image: url(./images/old-time-wall.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-	font-family: 'Cuprum', sans-serif;
-	padding: 15px;
-	font-size: 25px;
-	opacity: .75;
-	filter: alpha(opacity=50);
-}
-
-.btn {
-	width: 300px;
-}
-
-
-.uploadForm {
-	background-image: url(./images/old-time-wall.jpg);
+	background-image: url(./images/bricks.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	font-size: 25px;
@@ -33,12 +17,12 @@
 	width: 100%;
 	border: 1px solid black;
 	background-color: rgb(0,0,0,0.2);
+	z-index: 0;
 }
 
 .card-title {
 	text-align: center;
 }
-
 
 p {
 	font-size: 15px;
