--- a/client/src/pages/Profile/RegisterArtist/register.css
+++ b/client/src/pages/Profile/RegisterArtist/register.css
@@ -1,26 +1,41 @@
-body {
-		background-color: grey;
- }
-
-
 h3 {
-	font-family: 'Cuprum', sans-serif;
-	background-color: rgb(0,0,0,0.5);
-	width: 40%;
-	font-size: 20px;
+  font-family: "Cuprum", sans-serif;
+  background-color: rgb(0, 0, 0, 0.5);
+	width: 51%;
+	margin: 0;
+  font-size: 18px;
 }
 
 label {
-	color: white;
+  color: white;
 }
 
- .input-field  {
-	background-color: #DADADA;
+.title-register {
+	width: 100%;
+	margin-top: 2%;
+	font-size: 25px;
+	text-align: center;
+	color: green;
+	font-weight: bold;
+}
+
+.input-field {
+  background-color: #dadada;
 }
 
 .userform {
-	background-image: url(./img//wall.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-	margin-bottom: 5%;
+  background-image: url(./img//wall.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0;
 }
+
+.register {
+  width: 55%;
+  margin: 0 auto;
+  padding: 2% 7% 2% 7%;
+  border: 2px solid black;
+  background-color: rgb(119, 116, 116, 0.95);
+	box-shadow: 0 9px 9px black;
+}
+
