--- a/client/src/pages/Upload/upload_test.css
+++ b/client/src/pages/Upload/upload_test.css
@@ -15,13 +15,17 @@
 	margin-top: 0;
 	height: 100%;
 	width: 100%;
-	border: 1px solid black;
+	border: 3px solid black;
 	background-color: rgb(0,0,0,0.2);
 	z-index: 0;
 }
 
-.card-title {
+.title-upload {
 	text-align: center;
+	font-size: 25px;
+	margin-top: 2%;
+	color: green;
+	font-weight: bold;
 }
 
 p {
