--- a/client/src/components/Address/address.css
+++ b/client/src/components/Address/address.css
@@ -1,8 +1,8 @@
 .address {
 	padding: 2%;
 	width: 50%;
-	height: 100%;
-	background-color: #008080;
+	height: 90%;
+	background-color: rgb(0, 0, 0, 0.97);
 	color: white;
 	z-index: 1;
 }
@@ -13,5 +13,25 @@
 }
 
 .label {
+	color: white;
+}
+
+.addressTitle {
+	font-size: 25px;
+}
+
+#address {
+	color: white;
+}
+
+#city {
+	color: white;
+} 
+
+#state {
+	color: white;
+} 
+
+#zip {
 	color: white;
 }
