--- a/client/src/pages/Profile/RegisterArtist/register.css
+++ b/client/src/pages/Profile/RegisterArtist/register.css
@@ -1,7 +1,7 @@
 h3 {
   font-family: "Cuprum", sans-serif;
   background-color: rgb(0, 0, 0, 0.5);
-	width: 51%;
+	width: 100%;
 	margin: 0;
   font-size: 18px;
 }
@@ -12,15 +12,21 @@ label {
 
 .title-register {
 	width: 100%;
-	margin-top: 2%;
+	margin: 2%;
 	font-size: 25px;
 	text-align: center;
 	color: green;
 	font-weight: bold;
+	text-shadow: 1px 3px 3px black;
+}
+
+.commentBox {
+	overflow: hidden;
 }
 
 .input-field {
-  background-color: #dadada;
+	background-color: #dadada;
+	border: 1.5px solid black;
 }
 
 .userform {
@@ -31,10 +37,10 @@ label {
 }
 
 .register {
-  width: 55%;
+  width: 45%;
   margin: 0 auto;
-  padding: 2% 7% 2% 7%;
-  border: 2px solid black;
+  padding: 2% 5% 2% 5%;
+  border: 3px solid black;
   background-color: rgb(119, 116, 116, 0.95);
 	box-shadow: 0 9px 9px black;
 }
