--- a/client/src/pages/Upload/upload_test.css
+++ b/client/src/pages/Upload/upload_test.css
@@ -1,10 +1,10 @@
 .uploadForm {
-	background-image: url(./images/bricks.jpg);
+	background-image: url(./images/paint.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	font-size: 25px;
 	opacity: .75;
-	padding: 20px;
+	padding: 3%;
 }
 
 .btn {
@@ -12,10 +12,11 @@
 }
 
 .card-frame {
-	margin-top: 0;
+	margin: 0 0 0 20%;
 	height: 100%;
-	width: 100%;
+	width: 80%;
 	border: 3px solid black;
+	box-shadow: 2px 7px 7px black;
 	background-color: rgb(0,0,0,0.2);
 	z-index: 0;
 }
@@ -26,6 +27,7 @@
 	margin-top: 2%;
 	color: green;
 	font-weight: bold;
+	text-shadow: 2px 2px 5px black;
 }
 
 p {
@@ -33,7 +35,6 @@ p {
 }
 
 h1 {
-	text-shadow: 2px 2px 5px black;
 	color: white;
 }
 h5 {
