--- a/client/src/components/Map/google.css
+++ b/client/src/components/Map/google.css
@@ -4,7 +4,7 @@
 	color: #388e3c;
 	text-shadow: none;
 }
-
+/* 
 .map {
   position: relative;
   top: 0;
@@ -12,4 +12,4 @@
   right: 0;
 	bottom: 0;
 	width: 100%;
-}
+} */
