--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -1,15 +1,16 @@
-#title {
+#title-r {
 	font-family: 'Major Mono Display', monospace;
+	text-align: center;
 }
 
-.row-container {
+/* .row-container {
 	height: 500px;
 	opacity: .8;
 	filter: alpha(opacity=50);
-	margin: 25px 50px;
-	padding: 10px;
+	margin: 25px 25px;
+	padding: 20px;
 	width: 90%;
-}
+} */
 
 .noResults {
 	font-size: 80px;
@@ -25,5 +26,8 @@
 	background-image: url(./img/homepic.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-position: 'center center';
+	padding: 20px;
+	height: 500px;
+	margin: 30px 30px 0px 30px;
+	/* background-position: 'center center'; */
 }
