--- a/client/src/pages/Profile/RegisterArtist/register.css
+++ b/client/src/pages/Profile/RegisterArtist/register.css
@@ -1,6 +1,5 @@
-h3 {
+.contact-q {
   font-family: "Cuprum", sans-serif;
-  background-color: rgb(0, 0, 0, 0.5);
 	width: 100%;
 	margin: 0;
   font-size: 18px;
@@ -18,6 +17,7 @@ label {
 	color: green;
 	font-weight: bold;
 	text-shadow: 1px 3px 3px black;
+	font-family: 'Major Mono Display', monospace;
 }
 
 .commentBox {
