--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -1,6 +1,7 @@
 #title-r {
 	font-family: 'Major Mono Display', monospace;
 	text-align: center;
+	text-shadow: 3px 3px #B4B5A1;
 }
 
 /* .row-container {
