--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -1,3 +1,9 @@
+#title {
+	font-family: 'Major Mono Display', monospace;
+	text-align: center;
+	text-shadow: 2px 2px green;
+}
+
 #title-r {
 	font-family: 'Major Mono Display', monospace;
 	text-align: center;
