--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -11,6 +11,8 @@ nav {
 	font-size: 40px;
 	color: #FFFAF4;
 	font-family: 'Major Mono Display', monospace;
+	text-align: center;
+	text-shadow: 2px 2px green;
 }
 
 nav a {
