--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -24,9 +24,8 @@
 	color: black;
 	height: auto;
 	width: auto;
-	opacity: .8;
-	filter: alpha(opacity=50);
 	padding: 10px;
+	text-shadow: 2px 2px red;
 }
 
 .search-container {
