--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -25,7 +25,7 @@
 	height: auto;
 	width: auto;
 	padding: 10px;
-	text-shadow: 2px 2px red;
+	text-shadow: 2px 2px #AF2B16;
 }
 
 .search-container {
