--- a/client/src/components/artCard/artCard.css
+++ b/client/src/components/artCard/artCard.css
@@ -12,12 +12,13 @@
 }
 
 .card-image {
-	height: 100%;
-	width: 100%;
+	height: 350px;
 }
 
-img {
-	height: auto;
+#artImage {
+	object-fit: cover; 
+	width: 100%; 
+	height: 95%;
 }
 
 .center {
