--- a/client/src/pages/Artist/artistProfile.css
+++ b/client/src/pages/Artist/artistProfile.css
@@ -1,66 +1,79 @@
+.artistProfile {
+	background-image: url(./image/old-wall.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+
+}
+
 #title-a {
-	font-family: 'Major Mono Display', monospace;
+	color: black;
+	font-family: 'Ubuntu', sans-serif;
+	font-weight: Bold;
 	text-align: center;
-	text-shadow: 2px 2px green;
+	font-size: 78px;
+	padding: 5px;
+	margin-bottom: 25px;
+	text-shadow: 2px 2px #AF2B16;
+	text-transform: uppercase;
 }
 
 h6 {
-    font-family: 'Ubuntu', sans-serif;
-    font-weight: Bold;
-    text-align: center;
-    font-size: 40px;
-    padding: 5px;
-    text-shadow: 2px 2px #AF2B16;
+	font-family: 'Ubuntu', sans-serif;
+	font-weight: Bold;
+	text-align: center;
+	font-size: 40px;
+	padding-top: 25px;
+	text-shadow: 2px 2px #AF2B16;
 }
 
 #PP {
-    font-family: 'Ubuntu', sans-serif;
-    text-align: center;
-    padding-left: 10%;
-    padding-right: 10%;
-    font-size: 20px;
+	font-family: 'Ubuntu', sans-serif;
+	text-align: center;
+	padding-left: 10%;
+	padding-right: 10%;
+	font-size: 20px;
 }
 
 .info-name {
-    height: 50px;
-    width: 300px;
-    background-color:  #388e3c;
-    color: #FFFAF4;
-    border: 2px;
-    border-radius: 5px;
-    margin: auto;
+	height: 50px;
+	width: 90%;
+	background-color: #388e3c;
+	color: #FFFAF4;
+	border: 2px;
+	border-radius: 5px;
+	margin: auto;
 }
 
 .info-about {
-    height: auto;
-    width: auto;
-    background-color:  #388e3c;
-    color: #FFFAF4;
-    border: 2px;
-    border-radius: 5px;
-    margin: auto;
-    font-size: 30px;
+	height: auto;
+	width: 90%;
+	background-color: #388e3c;
+	color: #FFFAF4;
+	border: 2px;
+	border-radius: 5px;
+	margin: auto;
+	font-size: 30px;
 }
 
 .info-contact {
-    height: 30px;
-    width: 200px;
-    background-color:  #388e3c;
-    color: #FFFAF4;
-    border: 2px;
-    border-radius: 5px;
-    margin: auto;
-    font-size: 30px;
+	height: 30px;
+	width: 90%;
+	background-color: #388e3c;
+	color: #FFFAF4;
+	border: 2px;
+	border-radius: 5px;
+	margin: auto;
+	font-size: 30px;
 }
 
 
 .info-email {
-    height: 30px;
-    width: 300px;
-    background-color:  #388e3c;
-    color: #FFFAF4;
-    border: 2px;
-    border-radius: 5px;
-    margin: auto;
-    font-size: 30px;
+	height: 30px;
+	width: 90%;
+	background-color: #388e3c;
+	color: #FFFAF4;
+	border: 2px;
+	border-radius: 5px;
+	margin: auto;
+	font-size: 30px;
 }
