--- a/client/src/pages/Profile/RegisterArtist/register.css
+++ b/client/src/pages/Profile/RegisterArtist/register.css
@@ -38,11 +38,15 @@ label {
 }
 
 .register {
-  width: 45%;
+  width: 55%;
   margin: 0 auto;
   padding: 2% 5% 2% 5%;
-  border: 3px solid black;
-  background-color: rgb(119, 116, 116, 0.95);
+  background-color: rgb(0, 0, 0, 0.8);
 	box-shadow: 0 9px 9px black;
 }
 
+.register-submit {
+	width: 100%;
+	height: 50px;
+	margin-top: 3%;
+}
